plugins/editorconfig/testData/org/editorconfig/language/codeinsight/inspections/unclosedGlob/.editorconfig
# There should be no report from EditorConfigVerifyByCoreInspection.
# This test exists to check that exceptions coming from ec4j in this case are properly handled.
[*.foo
indent_size <error descr="<flat pattern>, EditorConfigTokenType.ASTERISK, EditorConfigTokenType.DOUBLE_ASTERISK, EditorConfigTokenType.L_BRACKET, EditorConfigTokenType.L_CURLY, EditorConfigTokenType.PATTERN_IDENTIFIER, EditorConfigTokenType.PATTERN_WHITE_SPACE, EditorConfigTokenType.QUESTION or EditorConfigTokenType.R_BRACKET expected, got '='">=</error> 4